<resources>
    <string name="app_name">常熟智慧城市</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="listEmpty">当前列表为空</string>
    <string name="loading">正在加载</string>
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">上拉刷新…</string>
    <string name="pull_to_refresh_from_bottom_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">正在载入…</string>
    <string name="press_more_exit">再按一次退出</string>
    <string name="menu_main">服务超市</string>
    <string name="menu_pay">服务热线</string>
    <string name="menu_my">我</string>
    <string name="city_news">城市新鲜事</string>
    <string name="weih_news">威海市地震局：网上流传近期有大地震言论不属实</string>
    <string name="m_messg">我的消息</string>
    <string name="m_collection">我的收藏</string>
    <string name="m_foot">我的足迹</string>
    <string name="sys_setting">系统设置</string>
    <string name="edit_data">编辑资料</string>
    <string name="safe_set">安全设置</string>
    <string name="login_txt">登录</string>
    <string name="loading_public_default">正在加载</string>
    <string name="tv_forget_pass">忘记密码？</string>
    <string name="tv_regist">立即注册</string>
    <string name="tv_user_name">用户名</string>
    <string name="hint_user_name">请输入用户名</string>
    <string name="tv_mobile">手机号码</string>
    <string name="hint_mobile">请输入手机号码</string>
    <string name="tv_send_verifycode">获取验证码</string>
    <string name="tv_send_verifycode_count">%s秒后重新获取</string>
    <string name="tv_verify_code">验证码</string>
    <string name="hint_verify_code">请输入验证码</string>
    <string name="tv_password">密码</string>
    <string name="tv_confirm_password">确认密码</string>
    <string name="hint_password">请输入密码(6~20位)</string>
    <string name="hint_prepassword">请输入原密码</string>
    <string name="hint_repassword">请再次输入密码</string>
    <string name="hint_cb_regist">我已阅读并同意</string>
    <string name="tv_regist_rules">《注册协议》</string>
    <string name="tv_auth_rules">《实名认证协议》</string>
    <string name="title_user_info">个人资料</string>
    <string name="tv_real_auth">实名认证</string>
    <string name="tv_real_auth_hint">未认证</string>
    <string name="tv_realname">真实姓名:</string>
    <string name="hint_realname">请输入真实姓名</string>
    <string name="main_buttom_news">新闻资讯</string>
    <string name="tv_sex">性别:</string>
    <string name="rb_sex_male">男</string>
    <string name="rb_sex_female">女</string>
    <string name="tv_brithday">生日:</string>
    <string name="tv_mail">邮箱:</string>
    <string name="hint_mail">--</string>
    <string name="tv_live_place">所在地:</string>
    <string name="modify_mobile">手机号码:</string>
    <string name="hint_live_place">请输入所在地</string>
    <string name="hint_brithday">请选择出生日期</string>
    <string name="btn_save">保          存</string>
    <string name="btn_confirm">确        定</string>
    <string name="btn_submit">提        交</string>
    <string name="tv_notify">提        示</string>
    <string name="tv_account_msg">您的账户信息</string>
    <string name="tv_username">用户名:</string>
    <string name="tv_loginname">登录名:</string>
    <string name="tv_authname">实名认证:</string>
    <string name="tv_bingding">手机绑定:</string>
    <string name="tv_loadpass">登录密码:</string>
    <string name="btn_action_auth">  &#160;&#160;去实名认证&#160;&#160;</string>
    <string name="btn_action_bind">更改绑定号码</string>
    <string name="btn_action_pass">更改登录密码</string>
    <string name="tv_lastlogintime">上次登录:</string>
    <string name="tv_unauth">未认证</string>
    <string name="tv_alauth">已认证</string>
    <string name="tv_bind">已绑定</string>
    <string name="tv_idcard_name">姓名:</string>
    <string name="tv_idcard_no">身份证号:</string>
    <string name="hint_idcard_no">请输入您的身份证号</string>
    <string name="tv_idcard_pic">身份证照片正,反面</string>
    <string name="btn_take_pic">拍照</string>
    <string name="btn_album">相册</string>
    <string name="btn_cancel">取消</string>
    <string name="tv_prepass">原密码:</string>
    <string name="tv_newpass">新密码:</string>
    <string name="tv_confirmpass">确认密码:</string>
    <string name="hint_pass_type">请输入6-20个字符</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="captcha_get">发送验证码</string>
    <string name="captcha_waitting">已发送</string>
    <string name="captcha_reget">重新发送</string>
    <string name="net_error">亲网络不给力，请稍候再试吧</string>
    <string name="no_network">网络未连接，请检查网络设置</string>
    <string name="captchechangepsw">您的手机%s以前注册过,输入验证码后,新密码将变更为您刚才设置过的密码</string>
    <string name="captcheString">您的手机%s\n会收到一条含有6位数字验证码的短信</string>
    <string name="app_picker_name">应用</string>
    <string name="bookmark_picker_name">书签</string>
    <string name="button_add_calendar">添加事件至日历</string>
    <string name="button_add_contact">添加联系人</string>
    <string name="button_back">返回</string>
    <string name="button_book_search">打开图书搜索</string>
    <string name="button_cancel">取消</string>
    <string name="button_custom_product_search">自定义搜索</string>
    <string name="button_dial">拨号</string>
    <string name="button_done">完成</string>
    <string name="button_email">发送email</string>
    <string name="button_get_directions">获取地址</string>
    <string name="button_google_shopper">谷歌购物</string>
    <string name="button_mms">发送彩信</string>
    <string name="button_ok">确定</string>
    <string name="button_open_browser">打开浏览器</string>
    <string name="button_product_search">打开产品搜索</string>
    <string name="button_search_book_contents">搜索图书内容</string>
    <string name="button_share_app">共享应用</string>
    <string name="button_share_bookmark">分享书签</string>
    <string name="button_share_by_email">通过email分享</string>
    <string name="button_share_by_sms">通过短信分享</string>
    <string name="button_share_clipboard">分享剪切板</string>
    <string name="button_share_contact">分享联系人</string>
    <string name="button_show_map">显示地图</string>
    <string name="button_sms">发送短信</string>
    <string name="button_web_search">网页搜索</string>
    <string name="button_wifi">连接到网络</string>
    <string name="contents_contact">联系人信息</string>
    <string name="contents_email">Email地址</string>
    <string name="contents_location">地理坐标</string>
    <string name="contents_phone">电话号码</string>
    <string name="contents_sms">短信地址</string>
    <string name="contents_text">纯文本</string>
    <string name="history_clear_one_history_text">删除</string>
    <string name="history_clear_text">删除历史</string>
    <string name="history_email_title">条码扫描器历史</string>
    <string name="history_empty">空的</string>
    <string name="history_empty_detail">没有条码扫描已记录</string>
    <string name="history_send">发送历史</string>
    <string name="history_title">历史</string>
    <string name="menu_encode_mecard">使用MECARD</string>
    <string name="menu_encode_vcard">使用vCard</string>
    <string name="menu_help">帮助</string>
    <string name="menu_history">历史</string>
    <string name="menu_settings">设置</string>
    <string name="menu_share">分享</string>
    <string name="msg_bulk_mode_scanned">批量扫描：找到条码，已保存</string>
    <string name="msg_default_format">格式</string>
    <string name="msg_default_meta">元数据</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_default_status">请将条码置于取景框内扫描。  </string>
    <string name="msg_default_time">时间</string>
    <string name="msg_default_type">类型</string>
    <string name="msg_encode_contents_failed">无法根据已有数据生成条码。   </string>
    <string name="msg_google_books">谷歌图书</string>
    <string name="msg_google_product">谷歌购物</string>
    <string name="msg_google_shopper_missing">谷歌购物未安装</string>
    <string name="msg_install_google_shopper">谷歌购物是一款将条码扫描和商品比价相结合的应用，谷歌购物不使用浏览器，您想尝试吗？</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="msg_redirect">重定向</string>
    <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
    <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
    <string name="msg_sbc_no_page_returned">无页面返回</string>
    <string name="msg_sbc_page">页面</string>
    <string name="msg_sbc_results">结果</string>
    <string name="msg_sbc_searching_book">搜索图书…</string>
    <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
    <string name="msg_sbc_unknown_page">未知页面</string>
    <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="msg_share_text">或键入一些文字</string>
    <string name="msg_sure">你肯定吗？</string>
    <string name="msg_unmount_usb">抱歉，SD卡不可访问。</string>
    <string name="preferences_actions_title">找到条码时</string>
    <string name="preferences_auto_focus_title">使用自动对焦</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
    <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_title">扫描 一维条码</string>
    <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
    <string name="preferences_decode_QR_title">扫描 QR码</string>
    <string name="preferences_device_bug_workarounds_title">设备问题解决办法</string>
    <string name="preferences_disable_continuous_focus_summary">只使用标准对焦模式</string>
    <string name="preferences_disable_continuous_focus_title">没有持续关注</string>
    <string name="preferences_disable_exposure_title">无曝光</string>
    <string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
    <string name="preferences_front_light_title">前灯</string>
    <string name="preferences_general_title">一般设置</string>
    <string name="preferences_name">设置</string>
    <string name="preferences_play_beep_title">提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
    <string name="preferences_remember_duplicates_title">记住重复</string>
    <string name="preferences_result_title">结果设置</string>
    <string name="preferences_scanning_title">条码类型选择</string>
    <string name="preferences_search_country">搜索国家</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_try_bsplus">尝试条码扫描器+</string>
    <string name="preferences_try_bsplus_summary">增强新的功能和接口</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="result_address_book">找到联系人信息</string>
    <string name="result_calendar">找到日历事件</string>
    <string name="result_email_address">找到email地址</string>
    <string name="result_geo">找到地理坐标</string>
    <string name="result_isbn">找到图书</string>
    <string name="result_product">找到产品</string>
    <string name="result_sms">找到短信地址</string>
    <string name="result_tel">找到电话号码</string>
    <string name="result_text">找到纯文本</string>
    <string name="result_uri">找到URL</string>
    <string name="result_wifi">发现网络配置</string>
    <string name="sbc_name">Google图书搜索</string>
    <string name="share_name">通过条码分享</string>
    <string name="wifi_changing_network">请求连接到网络\u2026</string>
    <string name="wifi_ssid_label">网络SSID</string>
    <string name="wifi_type_label">类型</string>
    <string name="tv_title">标题:</string>
    <string name="tv_content">内容:</string>
</resources>